--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           </div>
           <div class="video-container">
             <video class="video" muted loop playsinline preload="metadata">
-              <source src="video/kickload.mp4" type="video/mp4" />
+              <source src="public/video/kickload.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
           </div>
@@ -309,7 +309,7 @@
           </div>
           <div class="video-container">
             <video class="video" muted loop playsinline preload="metadata">
-              <source src="video/mediaid.mp4" type="video/mp4" />
+              <source src="public/video/mediaid.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
           </div>
@@ -322,7 +322,7 @@
           </div>
           <div class="video-container">
             <video class="video" muted loop playsinline preload="metadata">
-              <source src="video/netflix.mp4" type="video/mp4" />
+              <source src="public/video/netflix.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
           </div>
