--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </h4>
         <div id="buttons">
           <button id="b1" onclick="window.open('https://www.linkedin.com/in/debayansaha04/', '_blank')" aria-label="Connect on LinkedIn">LETS TALK <i class="ri-telegram-2-line"></i></button>
-          <a id="b2" href="public/DEBAYAN SAHA.pdf" download>
+          <a id="b2" href="/DEBAYAN SAHA.pdf" download>
             RESUME <i class="ri-download-cloud-fill"></i>
           </a>
         </div>
