--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
           <h1 id="l10">8+</h1>
           <h1 id="l10i">
             Hackathons <br />
-            Participation
+            Participated
           </h1>
         </div>
         <div id="box12">
