--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
         <div id="nav-left">
           <img src="./Logo1.png" alt="logo" />
         </div>
+        <button id="nav-toggle" aria-label="Open navigation" aria-expanded="false" aria-controls="center-nav">
+          <span class="hamburger-bar"></span>
+          <span class="hamburger-bar"></span>
+          <span class="hamburger-bar"></span>
+        </button>
         <div id="center-nav">
           <a href="#pageAboutMe">ABOUT</a>
           <a href="#page1">EXPERIENCE</a>
