--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         </h4>
         <div id="buttons">
           <button id="b1" onclick="window.open('https://www.linkedin.com/in/debayansaha04/', '_blank')" aria-label="Connect on LinkedIn">LETS TALK <i class="ri-telegram-2-line"></i></button>
-          <a id="b2" href="/DebayanSaha.pdf" download>
+          <a id="b2" href="DebayanSaha_2025.pdf" download>
             RESUME <i class="ri-download-cloud-fill"></i>
           </a>
         </div>
@@ -538,7 +538,7 @@
               <i class="ri-mail-line"></i>
               <h4>Email</h4>
             </div>
-              <h5>grindart004@gmail.com</h5>
+              <h5>debayansaha682@gmail.com</h5>
             <div class="phone">
               <i class="ri-phone-line"></i>
               <h4>Phone</h4>
@@ -575,7 +575,7 @@
               </div>
               <h2>Email</h2>
               <h4>Send me a message</h4>
-              <button onclick="window.open('https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJqXPSJDGDfWpRvBvgVXfkNGPzDgMLcqRsfnVhcgPfWCGCsjppsdVpxrlzMnfkhrxbMNGxq', '_blank')" aria-label="Connect on Email">Connect</button>
+              <button onclick="window.open('https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJqXPSJDGDfWpRvBvgVXfkNGPzDgMLcqRsfnVhcgPfWCGCsjppsdVpxrlzMnfkhrxbMNGxqhttps://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJqXPSJDGDfWpRvBvgVXfkNGPzDgMLcqRsfnVhcgPfWCGCsjppsdVpxrlzMnfkhrxbMNGxq', '_blank')" aria-label="Connect on Email">Connect</button>
             </div>
           </div>
         </div>
