--- a/public/index.html
+++ b/public/index.html
@@ -299,7 +299,7 @@
         <div class="projects p1">
           <div class="text3">
             <h1>KICKLOAD<br />Product Design</h1>
-            <div class="circle"><i class="ri-arrow-right-up-line" onclick="window.open('https://github.com/DebayanSaha/ViteKickloadDevelopmentServer', '_blank')" style="cursor: pointer;"></i></div>
+            <div class="circle"><i class="ri-arrow-right-up-line" onclick="window.open('https://kickload.neeyatai.com/signup', '_blank')" style="cursor: pointer;"></i></div>
           </div>
           <div class="video-container">
             <iframe 
